ADDED ICONS AND DARK MODE ICON USING SVG

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library app</title>
     <link rel="stylesheet" href="./styles.css">
+    <link id = "icon" rel = "icon" href = "./images/books-svgrepo-com.svg">
 </head>
 <body>
     <div class="header">
@@ -76,7 +77,8 @@
         {
             if (document.hidden) 
             {
-                gamemusic.pause();}
+                gamemusic.pause();
+            }
             else 
             {
                 gamemusic.play();
